<resources>
    <string name="app_name">BTPult</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="rescan">RESCAN</string>
    <string name="target_device">Target device:</string>
    <string name="connect">Connect</string>
    <string name="send_ping">Send ping</string>
    <string name="log_from_the_device">Log from the device</string>
    <string name="forward">Forward</string>
    <string name="reverse">Reverse</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
</resources>
